--- a/src/app/userlist/userlist.component.html
+++ b/src/app/userlist/userlist.component.html
@@ -30,7 +30,8 @@
                 <p>
                    {{ user.interests }}
                  </p>
-                <p><button type="button" class="btn btn-default" [routerLink]="['/city', user._id]">View Details</button></p>
+                <p>
+                <button type="button" class="btn btn-default" [routerLink]="['/city', user._id]">View Details</button></p>
                 <div class="content">
 
                 </div>
